fix restaurants horizontal scroll

--- a/frontend/src/styles/Restaurants.css
+++ b/frontend/src/styles/Restaurants.css
@@ -26,6 +26,8 @@ headerCardStyle {
   text-align: center;
   align-items: center;
   justify-content: center;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .subtitleTextStyle {
